--- a/Timesheet/Web.config
+++ b/Timesheet/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Timesheet-20140322041734.mdf;Initial Catalog=aspnet-Timesheet-20140322041734;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Timesheet-20140322041734.mdf;Initial Catalog=aspnet-Timesheet-20140322041734;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="yoctoTimesheetDb" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Timesheet-20140322041734.mdf;Initial Catalog=aspnet-Timesheet-20140322041734;Integrated Security=True"
+      providerName="System.Data.SqlClient" />  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
