--- a/Timesheet/Web.config
+++ b/Timesheet/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -11,8 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Timesheet-20140322041734.mdf;Initial Catalog=aspnet-Timesheet-20140322041734;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="yoctoTimesheetDb" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Timesheet-20140322041734.mdf;Initial Catalog=aspnet-Timesheet-20140322041734;Integrated Security=True"
-      providerName="System.Data.SqlClient" />  
+    <add name="yoctoTimesheetDb" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Timesheet-20140322041734.mdf;Initial Catalog=aspnet-Timesheet-20140322041734;Integrated Security=True" providerName="System.Data.SqlClient" />  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -46,7 +45,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
